# Avalon1126pro

./: .gitignore  ARCHITECTURE.md  README.md
analysis/: ANALYSIS_REPORT.md  analysis_results.json  decompiler.py  disassembler.py  disassembly.asm  firmware_analyzer.py  ghidra_script.py  ida_script.idc  ida_script.py  symbols.json  web_extractor.py
analysis/decompiled/: driver-avalon10.c  driver-avalon10.h  function_map.json  k210_init.c  memory_map.txt
analysis/web_interface/: api_endpoints.txt  index.html  page_00_0x0A97F5.html  page_01_0x0AEFC5.html  page_03_0x0BCDDD.html  page_04_0x0C047D.html  page_05_0x0C0B5D.html  page_06_0x0CA245.html  page_07_0x0D00DD.html  page_11_0x277285.html  page_17_0x29CED5.html  page_21_0x0BCDEE.html  page_24_0x0CA256.html  page_26_0x0DCD25.html  page_27_0x0DCDA4.html  page_29_0x269806.html  page_30_0x26EFD6.html  page_31_0x277296.html  page_33_0x28048E.html  page_34_0x280B6E.html  page_36_0x2900EE.html  page_39_0x29CEE6.html  scripts.js  styles.css
decompiled/: all_functions.c  firmware.c  function_list.txt  functions.txt  memory_map.txt
firmware/: CMakeLists.txt  README.md  toolchain-riscv.cmake
firmware/config/: k210.ld
firmware/include/: FreeRTOSConfig.h  avalon10.h  config.h  fan_control.h  flash.h  http_server.h  k210_hal.h  lwipopts.h  miner.h  network.h  stratum.h  utils.h
firmware/src/: driver_avalon10.c  fan_control.c  flash.c  http_server.c  k210_hal.c  main.c  network.c  startup.S  stratum.c  utils.c
kendryte-freertos-sdk/src/: .gitignore
kendryte-freertos-sdk/src/avalon1126/: CMakeLists.txt  api.c  api.h  auc_uart.c  auc_uart.h  avalon10.c  avalon10.h  cgminer.h  config.c  config.h  fpga_loader.c  fpga_loader.h  main.c  mock_hardware.c  mock_hardware.h  network.c  network.h  pool.c  pool.h  project.cmake  stratum.c  stratum.h  w25qxx.c  w25qxx.h  work.c  work.h
